WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200634
v3: CrashTracer: Regression : MobileSafari at UIKitCore: -[UITargetedPreview initWithView:parameters:]
https://bugs.webkit.org/show_bug.cgi?id=200634
Summary
v3: CrashTracer: Regression : MobileSafari at UIKitCore: -[UITargetedPreview ...
Luming Yin
Reported
2019-08-12 10:46:30 PDT
<
rdar://problem/54056605
>
Attachments
Patch
(1.84 KB, patch)
2019-08-12 10:59 PDT
,
Luming Yin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luming Yin
Comment 1
2019-08-12 10:59:14 PDT
Created
attachment 376079
[details]
Patch
Dean Jackson
Comment 2
2019-08-14 15:13:19 PDT
Committed
r248690
: <
https://trac.webkit.org/changeset/248690
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug